[package]
name = "linux_command_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true
