[package]
name = "linux_command_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'
strip = true
